--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Built with Jekyll 3.6.0
 
 # Setup
-title:               Ed.
-tagline:             'a jekyll theme for minimal editions'
-description:         'Ed is a Jekyll theme designed for textual editors based on minimal computing principles, and focused on legibility and flexibility.'
+title:               hello
+tagline:             'sophie is practicing'
+description:         'this is a random paragraph of text'
 url:                 'http://minicomp.github.io'
 baseurl:             '/sample'
 
